# TPF2-Timetables-Helper

./: .gitignore  CMakeLists.txt  Makefile  aliases.csv  input.csv  log.txt  output.csv  test_recording.sav.lua
src/: main.cpp
src/Line/: Line.cpp  Line.h
src/LuaIO/: LuaIO.cpp  LuaIO.h
src/Station/: Station.cpp  Station.h
src/StringHelper/: StringHelper.cpp  StringHelper.h
src/TimeTable/: TimeTable.cpp  TimeTable.h
src/Timing/: Timing.cpp  Timing.h
